--- a/src/main/resources/汇总.md
+++ b/src/main/resources/汇总.md
@@ -7,3 +7,12 @@
 - stop：不接受新任务，也不处理池中和队列中任务
 - tidying：所有任务都销毁了 会执行terminated()方法，需手动实现
 - terminated：tidying状态后，执行完terminated()就变味terminated
+###### 3.线程状态
+- new：初始化
+- runnable：运行中
+- blocked：阻塞
+- waiting：等待
+- terminated：终止
+- time_waiting：超时等待
+###### 4.索引类型有哪几种？
+普通索引、主键索引、唯一索引、空间索引、全文索引
